Pod-Liveness-Rediness_kube.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-2
  labels:
    app: nginx
    tier: frontend
spec:
  containers:
  - name: simple-webapp-2
    image: kodekloud/webapp-delayed-start
    ports:  
      - containerPort: 8080
    readinessProbe:
      httpGet:
        path: /ready
        port: 8080
      initialDelaySeconds: 10
      failureThreshold: 10
      periodSeconds: 5
      successThreshold: 3
    livenessProbe:
      httpGet:
        path: /ready
        port: 8080
      initialDelaySeconds: 10
      failureThreshold: 10
      periodSeconds: 5
