deployment_kube.yaml
#https://blog.container-solutions.com/kubernetes-deployment-strategies
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1 # how many pods we can add at a time
      maxUnavailable: 0 # maxUnavailable define how many pods can be unavailable during the rolling update
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
        tier: frontend
    spec:
      containers:
        - name: nginx
          image: nginx
  selector:
    matchLabels:
      app: nginx
      tier: frontend
