serviceNode_kube.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  selector:
    app: nginx
    tier: frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30004 #30000 - 32767
