networkpolicy_kube.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db 
  policyTypes:
  - Ingress 
  - Egress
  ingress:
    - from:
        - podSelector:        # allowing specific pod selector to access the db pod
            matchLabels:
              name: api-pod
          namespaceSelector:  # allowing specific namespace resources to access the db pod
            matchLabels:
              name: prod
        - ipBlock:
            cidr: 192.168.5.10/32   # allowing some specific Ip to access the db pod
          ports:
            - protocol: TCP
              port: 3306
  egress: # db can send the data to specific ip 
    - to: 
        - ipBlock: 
            cidr: 192.168.5.10/32   # allowing some specific Ip 
          ports:
            - protocol: TCP
              port: 3306

# podSelector & namespaceSelector are in "&" condition. Means both the condition should match
# podSelector & ipBlock are in "|" condition means either one can match.
